force-app/main/default/objects/Opportunity/fields/AccountCity__c.field-meta.xml
<CustomField>
    <fullName>AccountCity__c</fullName>
    <formula>Account.ShippingCity</formula>
    <label>xRemove City(Shipping)</label>
    <type>Text</type>
</CustomField>