force-app/main/default/objects/Opportunity/fields/AccountCountry__c.field-meta.xml
<CustomField>
    <fullName>AccountCountry__c</fullName>
    <formula>Account.Parent.ShippingCountry</formula>
    <label>Country</label>
    <type>Text</type>
</CustomField>