force-app/main/default/objects/Opportunity/fields/AccountKlopotekNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountKlopotekNumber__c</fullName>
    <description>Klopotek Number copied from Account, to be used for Liber order processing</description>
    <formula>Account.KlopotekNumber__c</formula>
    <label>Account Klopotek Number</label>
    <type>Text</type>
</CustomField>