force-app/main/default/objects/Opportunity/fields/AccountSchoolnet__c.field-meta.xml
<CustomField>
    <fullName>AccountSchoolnet__c</fullName>
    <formula>Text(Account.Schoolnet__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schoolnet</label>
    <type>Text</type>
</CustomField>