force-app/main/default/objects/Opportunity/fields/AccountStreet__c.field-meta.xml
<CustomField>
    <fullName>AccountStreet__c</fullName>
    <formula>Account.Parent.ShippingStreet</formula>
    <label>Street</label>
    <type>Text</type>
</CustomField>