force-app/main/default/objects/Opportunity/fields/AccountZipPostalCode__c.field-meta.xml
<CustomField>
    <fullName>AccountZipPostalCode__c</fullName>
    <formula>Account.Parent.ShippingPostalCode</formula>
    <label>Zip/Postal Code</label>
    <type>Text</type>
</CustomField>