force-app/main/default/objects/Opportunity/fields/AmountSubtotal__c.field-meta.xml
<CustomField>
    <fullName>AmountSubtotal__c</fullName>
    <description>Summed Subtotal of all OpportunityLines : Disregarding Discounts and based on List Price of the Product.</description>
    <inlineHelpText>Aggregated Subtotals of All Products.</inlineHelpText>
    <label>Amount Subtotal</label>
    <summarizedField>OpportunityLineItem.SubtotalValue__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>