force-app/main/default/objects/Opportunity/fields/Billto__c.field-meta.xml
<CustomField>
    <fullName>Billto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billto</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Billto)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>