force-app/main/default/objects/Opportunity/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <inlineHelpText>Selectie van het arrangement is voor VO verplicht bij het sluiten van een opportunity.</inlineHelpText>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flex</fullName>
            </value>
            <value>
                <fullName>Methode licentie</fullName>
            </value>
            <value>
                <fullName>Arrangement</fullName>
            </value>
            <value>
                <fullName>On-line</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>