force-app/main/default/objects/Opportunity/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <description>Cluster - This field is used as input for the formula-field &apos;Type of Education&apos;. Related to field &apos;TOE_Opleiding&apos;. Both fields are filled by Visual Workflow.</description>
    <label>Cluster</label>
    <length>255</length>
    <type>Text</type>
</CustomField>