force-app/main/default/objects/Opportunity/fields/ClusterEducation__c.field-meta.xml
<CustomField>
    <fullName>ClusterEducation__c</fullName>
    <formula>Cluster__c + &apos;/&apos; +  Opleiding__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cluster / Education</label>
    <type>Text</type>
</CustomField>