force-app/main/default/objects/Opportunity/fields/CompetitorCurrent__c.field-meta.xml
<CustomField>
    <fullName>CompetitorCurrent__c</fullName>
    <label>Competitor Current</label>
    <length>255</length>
    <type>Text</type>
</CustomField>