force-app/main/default/objects/Opportunity/fields/CompetitorCurrentPU__c.field-meta.xml
<CustomField>
    <fullName>CompetitorCurrentPU__c</fullName>
    <label>Competitor Current PU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abimo</fullName>
            </value>
            <value>
                <fullName>Academia Press</fullName>
            </value>
            <value>
                <fullName>Acco</fullName>
            </value>
            <value>
                <fullName>Andere</fullName>
            </value>
            <value>
                <fullName>Averbode</fullName>
            </value>
            <value>
                <fullName>Boom</fullName>
            </value>
            <value>
                <fullName>Broekx</fullName>
            </value>
            <value>
                <fullName>Cambridge</fullName>
            </value>
            <value>
                <fullName>Con+tact</fullName>
            </value>
            <value>
                <fullName>Coutinho</fullName>
            </value>
            <value>
                <fullName>CUP</fullName>
            </value>
            <value>
                <fullName>De Boeck</fullName>
            </value>
            <value>
                <fullName>De Garve</fullName>
            </value>
            <value>
                <fullName>Dessain</fullName>
            </value>
            <value>
                <fullName>Die Keure</fullName>
            </value>
            <value>
                <fullName>Diligentia</fullName>
            </value>
            <value>
                <fullName>Eigen reader</fullName>
            </value>
            <value>
                <fullName>Eng. uitgeverijen</fullName>
            </value>
            <value>
                <fullName>GO!</fullName>
            </value>
            <value>
                <fullName>Informat</fullName>
            </value>
            <value>
                <fullName>Informat cv</fullName>
            </value>
            <value>
                <fullName>Integrado</fullName>
            </value>
            <value>
                <fullName>Intersentia</fullName>
            </value>
            <value>
                <fullName>Intertaal</fullName>
            </value>
            <value>
                <fullName>Kluwer</fullName>
            </value>
            <value>
                <fullName>Lannoo Campus</fullName>
            </value>
            <value>
                <fullName>Licap</fullName>
            </value>
            <value>
                <fullName>Longman</fullName>
            </value>
            <value>
                <fullName>Macmillan</fullName>
            </value>
            <value>
                <fullName>Maklu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>