force-app/main/default/objects/Opportunity/fields/CompetitorNew__c.field-meta.xml
<CustomField>
    <fullName>CompetitorNew__c</fullName>
    <label>Competitor New</label>
    <length>255</length>
    <type>Text</type>
</CustomField>