force-app/main/default/objects/Opportunity/fields/ContractEndDate__c.field-meta.xml
<CustomField>
    <fullName>ContractEndDate__c</fullName>
    <description>The Date on which the Contract of Type &apos;License Agreement&apos; will End.</description>
    <formula>ADDMONTHS( ContractStartDate__c ,12) -1</formula>
    <inlineHelpText>Applies to Products of Type &apos;Recurring&apos;.</inlineHelpText>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>