force-app/main/default/objects/Opportunity/fields/ContractIndexation__c.field-meta.xml
<CustomField>
    <fullName>ContractIndexation__c</fullName>
    <defaultValue>true</defaultValue>
    <description>By default the contract indexation is ON. If this Opportunity is set to Closed Won, the following contract will get the checkbox checked.</description>
    <inlineHelpText>By default the contract indexation is ON. If this Opportunity is set to Closed Won, the following contract will get the checkbox checked.</inlineHelpText>
    <label>Contract Indexation</label>
    <type>Checkbox</type>
</CustomField>