force-app/main/default/objects/Opportunity/fields/ContractName__c.field-meta.xml
<CustomField>
    <fullName>ContractName__c</fullName>
    <formula>Contract.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Name</label>
    <type>Text</type>
</CustomField>