force-app/main/default/objects/Opportunity/fields/ContractRenewalType__c.field-meta.xml
<CustomField>
    <fullName>ContractRenewalType__c</fullName>
    <description>The Renewal Type that will be used on the Contract of Type &apos;License Agreement&apos;. 
Values are taken from the (Global) Picklist Value Set &quot;Contract Renewal Type&quot;.</description>
    <inlineHelpText>Applies to Products of Type &apos;Recurring&apos;.</inlineHelpText>
    <label>Contract Renewal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contract_Renewal_Type</valueSetName>
    </valueSet>
</CustomField>