force-app/main/default/objects/Opportunity/fields/ContractStartDate__c.field-meta.xml
<CustomField>
    <fullName>ContractStartDate__c</fullName>
    <description>The Date on which the Contract of Type &apos;License Agreement&apos; will Start.</description>
    <inlineHelpText>Applies to Products of Type &apos;Recurring&apos;.</inlineHelpText>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>