force-app/main/default/objects/Opportunity/fields/ContractTermmonths__c.field-meta.xml
<CustomField>
    <fullName>ContractTermmonths__c</fullName>
    <description>The number of Months that the Contract of Type &apos;License Agreement&apos; will be valid for.</description>
    <inlineHelpText>Applies to Products of Type &apos;Recurring&apos;.</inlineHelpText>
    <label>Contract Term (months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>