force-app/main/default/objects/Opportunity/fields/ContractValue__c.field-meta.xml
<CustomField>
    <fullName>ContractValue__c</fullName>
    <description>The summed currency value of all related OpportunityLineItems (Products) that are of (Record)Type &apos;Recurring&apos;.</description>
    <inlineHelpText>Summed Total Prices of Recurring Products.</inlineHelpText>
    <label>Contract Value</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.OpportunityLineProductRenewalBoolean__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>