force-app/main/default/objects/Opportunity/fields/CourseStartdate__c.field-meta.xml
<CustomField>
    <fullName>CourseStartdate__c</fullName>
    <description>Noordhoff field. Possible duplicate. Can be deleted? (AvK 18-01-2018)</description>
    <label>Course Startdate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fall</fullName>
            </value>
            <value>
                <fullName>Spring</fullName>
            </value>
            <value>
                <fullName>Fall / Spring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>