force-app/main/default/objects/Opportunity/fields/CreatedFromMasterContract__c.field-meta.xml
<CustomField>
    <fullName>CreatedFromMasterContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CreatedFromMasterContract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Opportunities (Contract)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>