force-app/main/default/objects/Opportunity/fields/CurrentTextBook__c.field-meta.xml
<CustomField>
    <fullName>CurrentTextBook__c</fullName>
    <description>Field used by Liber (UNI Sales process / rec type).</description>
    <label>Current Text Book</label>
    <length>255</length>
    <type>Text</type>
</CustomField>