force-app/main/default/objects/Opportunity/fields/CustomerRelationship__c.field-meta.xml
<CustomField>
    <fullName>CustomerRelationship__c</fullName>
    <label>Customer Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Relations</valueSetName>
    </valueSet>
</CustomField>