force-app/main/default/objects/Opportunity/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>Aggregated Average Discount percentage of All Products.</description>
    <formula>1 - ( Amount / AmountSubtotal__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Aggregated Average Discount percentage of All Products.</inlineHelpText>
    <label>Discount (AVG)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>