force-app/main/default/objects/Opportunity/fields/EducationType__c.field-meta.xml
<CustomField>
    <fullName>EducationType__c</fullName>
    <formula>TEXT( Account.EducationType__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Education Type</label>
    <type>Text</type>
</CustomField>