force-app/main/default/objects/Opportunity/fields/Excludeinprocess__c.field-meta.xml
<CustomField>
    <fullName>Excludeinprocess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude in process</label>
    <type>Checkbox</type>
</CustomField>