force-app/main/default/objects/Opportunity/fields/ExpectedRevenue__c.field-meta.xml
<CustomField>
    <fullName>ExpectedRevenue__c</fullName>
    <formula>/* TotalAmount__c *  Probability*/
IF(TotalAmount__c &gt; 0,TotalAmount__c *  Probability,Amount * Probability)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>