force-app/main/default/objects/Opportunity/fields/GroupName__c.field-meta.xml
<CustomField>
    <fullName>GroupName__c</fullName>
    <description>(R1-S1 by JD): Group Name.</description>
    <label>Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>