force-app/main/default/objects/Opportunity/fields/HasOLI__c.field-meta.xml
<CustomField>
    <fullName>HasOLI__c</fullName>
    <label>Has Line Items</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>