force-app/main/default/objects/Opportunity/fields/HoldingAccount__c.field-meta.xml
<CustomField>
    <fullName>HoldingAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Holding Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>All child opportunities</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>