force-app/main/default/objects/Opportunity/fields/ICOrderingDate__c.field-meta.xml
<CustomField>
    <fullName>ICOrderingDate__c</fullName>
    <description>(R1-S1 by JD): IC Ordering Date.</description>
    <label>IC Ordering Date</label>
    <type>Date</type>
</CustomField>