force-app/main/default/objects/Opportunity/fields/Inactive_Product_Count__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Product_Count__c</fullName>
    <label>Inactive Product Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>