force-app/main/default/objects/Opportunity/fields/InspectionCopy__c.field-meta.xml
<CustomField>
    <fullName>InspectionCopy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(R1-S1 by JD): Inspection Copy.</description>
    <label>Inspection Copy</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>