force-app/main/default/objects/Opportunity/fields/InventoryItemCount__c.field-meta.xml
<CustomField>
    <fullName>InventoryItemCount__c</fullName>
    <label>Inventory Item Count</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.ProductType__c</field>
        <operation>equals</operation>
        <value>Inventory Item</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>