force-app/main/default/objects/Opportunity/fields/InvoicingFrequency__c.field-meta.xml
<CustomField>
    <fullName>InvoicingFrequency__c</fullName>
    <description>The Frequency with which Invoices should be created, according to this Opportunity.
Values are taken from the (Global) Picklist Value Set &quot;Invoicing Frequency&quot;.</description>
    <label>Invoicing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Invoicing_Frequency</valueSetName>
    </valueSet>
</CustomField>