force-app/main/default/objects/Opportunity/fields/Is_Event_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_Event_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Follow Up Event/Task created. Checkbox (proof of planned follow up)</description>
    <label>Is Event Created</label>
    <type>Checkbox</type>
</CustomField>