force-app/main/default/objects/Opportunity/fields/Is_Validation_Bypassed__c.field-meta.xml
<CustomField>
    <fullName>Is_Validation_Bypassed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field is checked by the after save flow which allows the flow to bypass the validation rule then set the field value. The reason for this is the after save record triggered flow fires the validation.</description>
    <label>Is Validation Bypassed</label>
    <type>Checkbox</type>
</CustomField>