force-app/main/default/objects/Opportunity/fields/IsLost__c.field-meta.xml
<CustomField>
    <fullName>IsLost__c</fullName>
    <formula>AND(IsClosed = TRUE, IsWon = False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsLost</label>
    <type>Checkbox</type>
</CustomField>