force-app/main/default/objects/Opportunity/fields/IsOpen__c.field-meta.xml
<CustomField>
    <fullName>IsOpen__c</fullName>
    <formula>IsClosed = FALSE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsOpen</label>
    <type>Checkbox</type>
</CustomField>