force-app/main/default/objects/Opportunity/fields/IsRenewal__c.field-meta.xml
<CustomField>
    <fullName>IsRenewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRenewal</label>
    <type>Checkbox</type>
</CustomField>