force-app/main/default/objects/Opportunity/fields/IsWon__c.field-meta.xml
<CustomField>
    <fullName>IsWon__c</fullName>
    <formula>AND(IsClosed = TRUE, IsWon = TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsWon</label>
    <type>Checkbox</type>
</CustomField>