force-app/main/default/objects/Opportunity/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>nl_NL</fullName>
                <label>Dutch</label>
            </value>
            <value>
                <fullName>fr</fullName>
                <label>French</label>
            </value>
            <value>
                <fullName>se</fullName>
                <label>Swedish</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>