force-app/main/default/objects/Opportunity/fields/LeadAmount__c.field-meta.xml
<CustomField>
    <fullName>LeadAmount__c</fullName>
    <label>Lead amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>