force-app/main/default/objects/Opportunity/fields/LicenseValue__c.field-meta.xml
<CustomField>
    <fullName>LicenseValue__c</fullName>
    <label>LicenseValue</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.ProductFamilyType__c</field>
        <operation>equals</operation>
        <value>License</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>