force-app/main/default/objects/Opportunity/fields/LiteratureType__c.field-meta.xml
<CustomField>
    <fullName>LiteratureType__c</fullName>
    <label>Literature Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compulsory</fullName>
            </value>
            <value>
                <fullName>Not Compulsory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>