force-app/main/default/objects/Opportunity/fields/Lost__c.field-meta.xml
<CustomField>
    <fullName>Lost__c</fullName>
    <formula>AND(IsClosed = TRUE, 
IsWon = FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lost</label>
    <type>Checkbox</type>
</CustomField>