force-app/main/default/objects/Opportunity/fields/MarketingactiondetailOPP__c.field-meta.xml
<CustomField>
    <fullName>MarketingactiondetailOPP__c</fullName>
    <description>To be used only when Marketing action is selected in Lead Source</description>
    <label>Marketing action detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Beleefsessies</fullName>
            </value>
            <value>
                <fullName>Chill met Zill</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>GEX</fullName>
            </value>
            <value>
                <fullName>Impact test campaign</fullName>
            </value>
            <value>
                <fullName>Kanjercadeau</fullName>
            </value>
            <value>
                <fullName>Kanjerdagen</fullName>
            </value>
            <value>
                <fullName>Kanjerklas</fullName>
            </value>
            <value>
                <fullName>Kanjerpakket</fullName>
            </value>
            <value>
                <fullName>Kerst in zicht</fullName>
            </value>
            <value>
                <fullName>Leadactie Kanjers</fullName>
            </value>
            <value>
                <fullName>Methodepagina</fullName>
            </value>
            <value>
                <fullName>Newsletter</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
                <default>true</default>
                <label>Not applicable</label>
            </value>
            <value>
                <fullName>Sneak preview</fullName>
            </value>
            <value>
                <fullName>Voorbeeldhoofdstuk</fullName>
            </value>
            <value>
                <fullName>Vraag het aan Plantyn</fullName>
            </value>
            <value>
                <fullName>Wij willen meer tijd</fullName>
            </value>
            <value>
                <fullName>Zorgtips</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>