force-app/main/default/objects/Opportunity/fields/MaxDiscount__c.field-meta.xml
<CustomField>
    <fullName>MaxDiscount__c</fullName>
    <description>The highest number (percentage), applied on a Product on this Opportunity.</description>
    <label>Max. Discount</label>
    <summarizedField>OpportunityLineItem.Discount</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>