force-app/main/default/objects/Opportunity/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select an active Brand only</errorMessage>
        <filterItems>
            <field>Method__c.inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Method__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>